# reclaim

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
app-use/: 中文软件使用教程.md  技术框架1-2分钟介绍.md
apps/desktop/: main.cjs  package.json
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: i18n.ts
apps/web/tests/: admin-actions-route.test.ts  admin-health-route.test.ts  admin-llm-settings-route.test.ts  admin-overview-route.test.ts  analytics-weekly-route.test.ts  dynamic-replan-route.test.ts  event-replan-route.test.ts  import-schedule-route.test.ts  links-availability-route.test.ts  (+15 more)
docs/: planner-collab-handoff-2026-05-13.md  中文软件使用教程.md
docs/scheduling/: replan-v03-integration.md
infra/compose/: docker-compose.yml
scripts/windows/: build-app-use.cmd  build-app-use.ps1  check-env.cmd  check-env.ps1  git-sync.cmd  git-sync.ps1  start-maintenance.cmd  start-maintenance.ps1  status-maintenance.cmd  status-maintenance.ps1  stop-maintenance.cmd  stop-maintenance.ps1
services/scheduler/: Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
services/scheduler/app/: main.py
services/scheduler/app/api/: constraints.py  schedule.py
services/scheduler/app/core/: event_replan.py  heuristics.py  models.py  ortools_solver.py  reasoner.py
services/scheduler/scripts/: run-python.ps1
services/scheduler/tests/: test_constraints.py  test_event_replan.py  test_heuristics.py  test_timezone_dst.py
(+112 files in other folders)
