[project]
name = "reclaim-scheduler"
version = "0.1.0"
description = "Scheduling service for Reclaim-like dynamic planning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.31.0",
  "pydantic>=2.9.2",
  "ortools>=9.11.0",
  "pytest>=8.3.3"
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
